--- a/css/style.css
+++ b/css/style.css
@@ -984,7 +984,7 @@ body {
 	position: absolute;
 	top: 0;
 	left: 0;
-	visibility: hidden;
+	/*visibility: hidden;*/
 	overflow: auto;
 	-webkit-backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
