added info about me

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -22,6 +22,7 @@
     <div class="global-menu">
         <div class="global-menu__wrap" role="menu">
             <a class="global-menu__item global-menu__item--transition" href="/">Home</a>
+            <a class="global-menu__item global-menu__item--transition" href="/blog">Blog</a>
             <a class="global-menu__item global-menu__item--transition" href="/profile">Profile</a>
             <a class="global-menu__item global-menu__item--transition" href="/employment">Employment</a>
             <a class="global-menu__item global-menu__item--transition" href="/education">Education</a>
