--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,26 @@ common-js:
         {% include menu.html %}
         <div id="content-container" class="content-container height-one">
             <div id="pages-container" class="pages-container pages-perspective">
-                {{ content }}
+                <div class="page-container">
+                    <div class="container">
+                        <div class="page_title text-center">
+                            <h2 class="page-title">{{ page.title }}</h2>
+                        </div>
+                        {% if page.share-img %}
+                        <img class="post-image" src="{{ page.share-img }}">
+                        {% endif %}
+                        <br>
+                        {{ content }}
+                        <p class="post-meta">
+                            Posted on {{ page.date | date: "%B %-d, %Y" }}
+                        </p>
+                        {% if page.comments %}
+                        <div class="disqus-comments">
+                            {% include disqus.html %}
+                        </div>
+                        {% endif %}
+                    </div>
+                </div>
             </div>
         </div>
         <svg class="shape-overlays" viewBox="0 0 100 100" preserveAspectRatio="none">
