certificates list completed, filled skills page

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,7 +1,4 @@
 <header>
-    <div class="logo">
-        <!--<a href="index.html"><img src="img/logo.png" alt="logo"></a>-->
-    </div>
     <div class="hamburger js-hover">
         <div class="hamburger__line hamburger__line--01">
             <div class="hamburger__line-in hamburger__line-in--01"></div>
@@ -26,7 +23,7 @@
             <a class="global-menu__item global-menu__item--transition" href="/profile">Profile</a>
             <a class="global-menu__item global-menu__item--transition" href="/employment">Employment</a>
             <a class="global-menu__item global-menu__item--transition" href="/education">Education</a>
-            <a class="global-menu__item global-menu__item--transition" href="/services">Services</a>
+            <a class="global-menu__item global-menu__item--transition" href="/skills">Skills</a>
             <a class="global-menu__item global-menu__item--transition" href="/portfolio">Portfolio</a>
         </div>
     </div>
