--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,15 +4,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
     {% if page.meta-title %}
-    <title>{{ page.meta-title }}</title>
+    <title>{{ page.meta-title }} - {{ site.title }}</title>
     {% elsif page.title %}
-    <title>{{ page.title }}</title>
+    <title>{{ page.title }} - {{ site.title }}</title>
     {% else %}
     <title>{{ site.title }}</title>
     {% endif %}
-
     <meta name="author" content="{{ site.author.name }}" />
-
     {% if page.meta-description %}
     <meta name="description" content="{{ page.meta-description }}">
     {% elsif page.subtitle %}
@@ -20,47 +18,39 @@
     {% else %}
     <meta name="description" content="{{ page.content | strip_html | xml_escape | truncatewords: 50 }}">
     {% endif %}
-
-    <meta name="keywords" content="rstats,r,r shiny,shiny apps,r shiny apps,shiny developer,r shiny developer,shiny consultant,dashboards r,interactive dashboards">
+    <meta name="keywords" content="Yura, Yura Sultonov, Developer, Blog, Web, Android, iOS">
 
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-
     {% if layout.common-ext-css %}
     {% for css in layout.common-ext-css %}
     <link rel="stylesheet" href="{{ css }}" />
     {% endfor %}
     {% endif %}
-
     {% if layout.common-css %}
     {% for css in layout.common-css %}
     <link rel="stylesheet" href="{{ css | prepend: site.baseurl | replace: '//', '/' }}" />
     {% endfor %}
     {% endif %}
-
     {% if layout.common-googlefonts %}
     {% for font in layout.common-googlefonts %}
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family={{ font }}" />
     {% endfor %}
     {% endif %}
-
     {% if page.ext-css %}
     {% for css in page.ext-css %}
     <link rel="stylesheet" href="{{ css }}" />
     {% endfor %}
     {% endif %}
-
     {% if page.css %}
     {% for css in page.css %}
     <link rel="stylesheet" href="{{ css | prepend: site.baseurl | replace: '//', '/' }}" />
     {% endfor %}
     {% endif %}
-
     {% if page.googlefonts %}
     {% for font in page.googlefonts %}
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family={{ font }}" />
     {% endfor %}
     {% endif %}
-
     <!-- Facebook OpenGraph tags -->
     {% if page.meta-title %}
     <meta property="og:title" content="{{ page.meta-title }}" />
@@ -69,9 +59,7 @@
     {% else %}
     <meta property="og:title" content="{{ site.title }}" />
     {% endif %}
-
     <meta property="og:type" content="website" />
-
     {% if page.id %}
     <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
     <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
@@ -79,13 +67,11 @@
     <meta property="og:url" content="{{ site.url }}{{ page.url | remove: '/index.html' | remove: '.html' }}" />
     <link rel="canonical" href="{{ site.url }}{{ page.url | remove: '/index.html' | remove: '.html' }}" />
     {% endif %}
-
     {% if page.share-img %}
     <meta property="og:image" content="{{ page.share-img }}" />
     {% else %}
     <meta property="og:image" content="{{ site.url }}{{ site.avatar }}" />
     {% endif %}
-
     <!-- Twitter summary cards -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@{{ site.author.twitter }}" />
@@ -97,5 +83,4 @@
     {% elsif site.avatar %}
     <meta name="twitter:image" content="{{ site.url }}{{ site.avatar }}" />
     {% endif %}
-
 </head>
