--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -15,6 +15,7 @@ common-js:
 - "/js/typed.min.js"
 - "/js/isotope.pkgd.min.js"
 - "/js/jquery.magnific-popup.js"
+- "/js/lazyload.min.js"
 ---
 
 <!DOCTYPE html>
