--- a/_includes/head.html
+++ b/_includes/head.html
@@ -60,6 +60,13 @@
     <meta property="og:title" content="{{ site.title }}" />
     {% endif %}
     <meta property="og:type" content="website" />
+    {% if page.meta-description %}
+    <meta property="og:description" content="{{ page.meta-description }}">
+    {% elsif page.subtitle %}
+    <meta property="og:description" content="{{ page.subtitle }}">
+    {% else %}
+    <meta property="og:description" content="{{ page.content | strip_html | xml_escape | truncatewords: 50 }}">
+    {% endif %}
     {% if page.id %}
     <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
     <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
