Open Graph protocol markup

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ common-js:
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 {% include head.html %}
 <body class="body-wrapper render">
     {% include loader.html %}
