--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -19,7 +19,7 @@ common-js:
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 {% include head.html %}
 <body class="body-wrapper render">
     {% include loader.html %}
