--- a/_includes/head.html
+++ b/_includes/head.html
@@ -75,7 +75,7 @@
     <link rel="canonical" href="{{ site.url }}{{ page.url | remove: '/index.html' | remove: '.html' }}" />
     {% endif %}
     {% if page.share-img %}
-    <meta property="og:image" content="{{ page.share-img }}" />
+    <meta property="og:image" content="{{ site.url }}{{ page.share-img }}" />
     {% else %}
     <meta property="og:image" content="{{ site.url }}{{ site.avatar }}" />
     {% endif %}
@@ -86,7 +86,7 @@
     <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
     <meta name="twitter:description" content="{{ page.content | strip_html | xml_escape | truncatewords: 50 }}" />
     {% if page.share-img %}
-    <meta name="twitter:image" content="{{ page.share-img }}" />
+    <meta name="twitter:image" content="{{ site.url }}{{ page.share-img }}" />
     {% elsif site.avatar %}
     <meta name="twitter:image" content="{{ site.url }}{{ site.avatar }}" />
     {% endif %}
