twitter via param fixed

--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -1,6 +1,6 @@
 <section class = "social-share-section">
     <!--- Share on Twitter -->
-    <a href="https://twitter.com/intent/tweet?text={{ site.url }}{{ page.url }}&via={{ author.twitter }}"
+    <a href="https://twitter.com/intent/tweet?text={{ site.url }}{{ page.url }}&via={{ site.author.twitter }}"
        class="btn btn-social-icon btn-twitter" title="Share on Twitter"
        data-ga-event=1 data-ga-category="share" data-ga-action="social-twitter" data-ga-label="{{ page.url }}">
         <span class="fa-lg fab fa-fw fa-twitter" aria-hidden="true"></span>
