new post added, some styles changed

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@ common-js:
         <div id="content-container" class="content-container height-one">
             <div id="pages-container" class="pages-container pages-perspective">
                 <div class="page-container">
-                    <div class="container">
+                    <div class="container post">
                         <div class="page_title text-center">
                             <h1 class="page-title">{{ page.title }}</h1>
                         </div>
