--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ body {
     content: '';
     border: 4px solid #3d3d3d;
     border-top: none;
-    height: 60%;
+    height: 75%;
     width: 100%;
     top: 20px;
     left: 0;
@@ -1233,6 +1233,10 @@ body {
 
 .post-image {
 	width: 100%;
+}
+
+.post a {
+	color: #5d93d8;
 }
 
 .fa-lg {
