added highlight js, written new post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@ common-css:
 - "/css/bootstrap.css"
 - "/css/style.css"
 - "/css/magnific-popup.css"
+- "/css/highlight/androidstudio.css"
 - "/fontawesome-pro/css/all.min.css"
 common-js:
 - "/js/jquery-2.2.4.min.js"
@@ -15,6 +16,7 @@ common-js:
 - "/js/typed.min.js"
 - "/js/isotope.pkgd.min.js"
 - "/js/jquery.magnific-popup.js"
+- "/js/highlight.pack.js"
 ---
 
 <!DOCTYPE html>
