--- a/_includes/footer_scripts.html
+++ b/_includes/footer_scripts.html
@@ -21,3 +21,4 @@
 <script src="{{ js | prepend: site.baseurl | replace: '//', '/' }}"></script>
 {% endfor %}
 {% endif %}
+{% include google_analytics.html %}
